changes/5.14-rc2/04612968783f6892c1eb710b444fc5bbe8f5c673
perf auxtrace: Make perf_event__process_auxtrace*() callable

As we'll use it in the upcoming python interfaces and when built with:

                make_minimal_O: make NO_LIBPERL=1 NO_LIBPYTHON=1 NO_NEWT=1 NO_GTK2=1 NO_DEMANGLE=1 NO_LIBELF=1 NO_LIBUNWIND=1 NO_BACKTRACE=1 NO_LIBNUMA=1 NO_LIBAUDIT=1 NO_LIBBIONIC=1 NO_LIBDW_DWARF_UNWIND=1 NO_AUXTRACE=1 NO_LIBBPF=1 NO_LIBCRYPTO=1 NO_SDT=1 NO_JVMTI=1
  +NO_LIBZSTD=1 NO_LIBCAP=1 NO_SYSCALL_TABLE=1
  make NO_LIBPERL=1 NO_LIBPYTHON=1 NO_NEWT=1 NO_GTK2=1 NO_DEMANGLE=1 NO_LIBELF=1 NO_LIBUNWIND=1 NO_BACKTRACE=1 NO_LIBNUMA=1 NO_LIBAUDIT=1 NO_LIBBIONIC=1 NO_LIBDW_DWARF_UNWIND=1 NO_AUXTRACE=1 NO_LIBBPF=1 NO_LIBCRYPTO=1 NO_SDT=1 NO_JVMTI=1 NO_LIBZSTD=1 NO_LIBCAP=1
  +NO_SYSCALL_TABLE=1
    BUILD:   Doing 'make -j24' parallel build
  <SNIP>
    CC      /tmp/tmp.rGrdpQlTCr/builtin-daemon.o
  In file included from util/events_stats.h:8,
                   from util/evlist.h:12,
                   from builtin-script.c:18:
  builtin-script.c: In function ‘process_auxtrace_error’:
  util/auxtrace.h:708:57: error: called object is not a function or function pointer
    708 | #define perf_event__process_auxtrace_error              0
        |                                                         ^
  builtin-script.c:2443:16: note: in expansion of macro ‘perf_event__process_auxtrace_error’
   2443 |         return perf_event__process_auxtrace_error(session, event);
        |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    MKDIR   /tmp/tmp.rGrdpQlTCr/tests/
    MKDIR   /tmp/tmp.rGrdpQlTCr/bench/
    CC      /tmp/tmp.rGrdpQlTCr/tests/builtin-test.o
    CC      /tmp/tmp.rGrdpQlTCr/bench/sched-messaging.o
  builtin-script.c:2444:1: error: control reaches end of non-void function [-Werror=return-type]
   2444 | }
        | ^

To: Adrian Hunter <adrian.hunter@intel.com>
Cc: Andi Kleen <ak@linux.intel.com>
Cc: Jiri Olsa <jolsa@redhat.com>
Signed-off-by: Arnaldo Carvalho de Melo <acme@redhat.com>

